# imageflow-app

./: .gitignore  README.md  docker-compose.yml  nginx.conf
backend/: Dockerfile  celery_app.py  database.py  database_sync.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  tasks.py
backend/routers/: jobs.py
backend/tasks/: processing_tasks.py  thumbnail_tasks.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/services/: api.ts
